<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Google Map Fragment -->
    <fragment
        android:id="@+id/mapFragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/dateSearchLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/bg_toggle_container"
        app:layout_constraintTop_toBottomOf="@+id/toggleButtons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="visible">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/magnitudeInputLayout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="none"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/blue_light"
            app:hintTextColor="@color/blue_light"
            app:counterTextColor="@color/blue_light"
            app:helperTextTextColor="@color/blue_light"
            android:textCursorDrawable="@drawable/custom_cursor"
            app:cursorColor="@color/blue_light"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_magnitude_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:hint="@string/search_by_magnitude"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/custom_cursor"
                android:padding="8dp"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <Spinner
            android:id="@+id/spinnerDateFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:spinnerMode="dropdown"
            android:backgroundTint="@android:color/white"
            android:popupBackground="@color/infoCardBackground2"
            android:entries="@array/date_filters" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cardAllEarthquakesInf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp"
        android:background="@drawable/bg_toggle_container"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/dateSearchLayout"
        app:layout_constraintStart_toStartOf="@+id/dateSearchLayout"
        app:layout_constraintEnd_toEndOf="@+id/dateSearchLayout"
        android:visibility="gone">

        <!-- Title -->
        <TextView
            android:id="@+id/textEarthquakeCountTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_earthquakes"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/blue_light"
            />

        <!-- Earthquake count number -->
        <TextView
            android:id="@+id/textEarthquakeCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="4dp"
            />

        <!-- Row with start and end -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:layout_weight="2">

            <TextView
                android:id="@+id/textStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_at"
                android:textColor="@color/white"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/textEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_at"
                android:textColor="@color/white"
                android:layout_weight="1"
                />
        </LinearLayout>

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardWeatherInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginBottom="273dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="3dp"
        android:backgroundTint="@color/infoCardBackground2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButtons"
        android:visibility="visible"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <!-- Big Degree Text -->
            <TextView
                android:id="@+id/textTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/temperature"
                android:textColor="@android:color/white"
                android:textSize="64sp"
                android:textStyle="bold" />

            <!-- Vertical Info -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <!-- Location -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/location"
                        android:src="@drawable/ic_location" />

                    <TextView
                        android:id="@+id/textLocationTemperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/cairo_egypt"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />
                </LinearLayout>

                <!-- Humidity -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/humidity"
                        android:src="@drawable/ic_humidity" />

                    <TextView
                        android:id="@+id/textHumidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/humidity_60"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />
                </LinearLayout>

                <!-- Description -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/weather"
                        android:src="@drawable/ic_weather" />

                    <TextView
                        android:id="@+id/textDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/sunny"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <!-- Toggle Buttons -->
    <LinearLayout
        android:id="@+id/toggleButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_toggle_container"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnWeather"
            android:background="@drawable/bg_button_selector"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4sp"
            android:text="@string/weather" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEarthquake"
            android:background="@drawable/bg_button_selector"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/earthquakes"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4sp"
            />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardEarthquakeInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/infoCardBackground2"
        app:cardCornerRadius="16dp"
        app:cardElevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/mapFragment"
        android:visibility="gone">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            >

            <!-- Big Magnitude Text -->
            <TextView
                android:id="@+id/textMagnitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/magnitude"
                android:textColor="@android:color/white"
                android:textSize="64sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <!-- Vertical Info Column -->
            <LinearLayout
                android:id="@+id/verticalInfoContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/textMagnitude"
                app:layout_constraintEnd_toEndOf="parent">

                <!-- Location -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_location"
                        android:contentDescription="@string/location" />

                    <TextView
                        android:id="@+id/textLocation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:text="@string/cairo_egypt"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />
                </LinearLayout>

                <!-- Depth -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_depth"
                        android:contentDescription="@string/depth" />

                    <TextView
                        android:id="@+id/textDepth"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:text="@string/depth10"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />
                </LinearLayout>

                <!-- Date & Time -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_calendar"
                        android:contentDescription="@string/datetime" />

                    <TextView
                        android:id="@+id/textDateTime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:text="@string/realTime"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/ibMyLoction"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_button_selector"
        android:padding="12dp"
        android:src="@drawable/ic_my_location"
        android:backgroundTint="@color/infoCardBackground2"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
